// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterListItem adds activeClassName={SELECTED_CLASS} when it gets a "to" prop 1`] = `<div />`;

exports[`FilterListItem renders the given "is" prop 1`] = `
<b
  blacklist={
    Array [
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="filter-item emotion-0"
/>
`;

exports[`FilterListItem respects the "selected" prop 1`] = `
<a
  blacklist={
    Array [
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="filter-item selected emotion-0"
/>
`;
